--- a/intro_to_gmm_&_em.ipynb
+++ b/intro_to_gmm_&_em.ipynb
@@ -660,7 +660,7 @@
     "        self.mix = one_den / len(data)\n",
     "\n",
     "    def iterate(self, N=1, verbose=False):\n",
-    "        \"Perform N iterations, then compute log-likelihood\"\n",
+    "        \"Perform N iterations, then compute log-likelihood mix.Mstep(mix.Estep())\"\n",
     "\n",
     "    def pdf(self, x):\n",
     "        return (self.mix)*self.one.pdf(x) + (1-self.mix)*self.two.pdf(x)\n",
